minor z-index bug

--- a/client/style.css
+++ b/client/style.css
@@ -162,7 +162,7 @@ textarea {
   -moz-opacity: .70;
   filter:alpha(opacity=70);
   opacity: .70;
-  z-index: 2;
+  z-index: 4;
 }
 #chat {
   margin-top: 5px;
